# agentic-local-rag

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
docs/: PRD.md
docs/sprints/: 00-sprint-plan-overview.md  __summary.md  sprint-01-docker-compose-foundation.md  sprint-02-fastapi-api-gateway.md  sprint-03-litellm-vllm.md  sprint-04-tei-qdrant-hybrid-search.md  sprint-05-docling-ingestion.md  sprint-06-offline-ingestion-workflow.md  sprint-07-langgraph-orchestration.md  sprint-08-memory-caching.md  sprint-09-nemo-guardrails.md  sprint-10-online-query-workflow.md  sprint-11-langfuse-observability.md  sprint-12-evaluation-monitoring.md
infra/: README.md
scripts/: verify-sprint01.ps1  verify-sprint01.sh  verify-sprint02.ps1  verify-sprint02.sh
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: config.py  main.py  ws_smoke_test.py
services/api-gateway/app/api/: streaming.py
services/api-gateway/app/api/v1/: auth.py  health.py  router.py
services/api-gateway/app/auth/: __init__.py  dependencies.py  jwt.py
services/api-gateway/app/services/: probes.py
