[project]
name = "earp-api-gateway"
version = "0.1.0"
description = "EARP FastAPI API Gateway"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "uvicorn[standard]>=0.34.0",
]
